demo/lab-docker-k8s/03-k8s-apps/jenkins/deployment-svc-ingres.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: jenkinsdeployment
  namespace: devoxx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        pod: jenkinsPOD
    spec:
      containers:
        - name: jenkinscontainer
          image: jenkins/jenkins:2.150.3-alpine
          imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: jenkinsservice
  namespace: devoxx
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: jenkinssp
    - port: 50000
      targetPort: 50000
      name: jenkinsadminsp
  selector:
    pod: jenkinsPOD

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkinsingress
  namespace: devoxx
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.ingress.kubernetes.io/frontend-entry-points: https
spec:
  rules:
  - host: lab.nicolas.containous.cloud
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkinsservice
          servicePort: 8080
