demo/lab-docker-k8s/03-k8s-apps/jenkins/deployment-svc-ingress.yml
# tag::deployment[]
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: jenkins-full-deployment
  namespace: devoxx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        guilde: ci
        faction: jenkins
    spec:
      containers:
        - name: jenkins-full-container
          image: jenkins/jenkins:2.150.3-alpine
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-full-service
  namespace: devoxx
  labels:
    guilde: ci
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: jenkins-http
    - port: 50000
      name: jenkins-agent
  selector:
    guilde: ci
    faction: jenkins
# end::svc[]

# tag::ingress[]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-full-ingress
  namespace: devoxx
  labels:
    guilde: ci
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: {lab-domain}
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins-full-service
          servicePort: jenkins-http
# end::ingress[]
